--- a/components/HeaderMain/headerMain.module.scss
+++ b/components/HeaderMain/headerMain.module.scss
@@ -1,15 +1,7 @@
 .header {
   background-color: rgba(11, 43, 32, 1);
-  padding: 15px 0px;
-  @media screen and (min-width: 1280px) {
-    padding: 15px 20px;
-  }
-  @media screen and (min-width: 1440px) {
-    padding: 15px 45px;
-  }
-  @media screen and (max-width: 992px) {
-    padding: 15px 25px;
-  }
+  padding-top: 10px;
+  padding-bottom: 10px;
   &_content {
     justify-content: space-between;
     align-items: center;
