--- a/pages/golf/home/home.module.scss
+++ b/pages/golf/home/home.module.scss
@@ -1,5 +1,5 @@
 .home_page {
-  .goft_news,
+  .goft_home,
   .community {
     margin-top: 40px;
     .content {
@@ -12,6 +12,7 @@
           "a a a"
           "b c d";
         .item {
+          cursor: pointer;
           position: relative;
           width: 100%;
           .title {
@@ -25,6 +26,9 @@
               font-weight: 600;
               color: #fff;
               line-height: 1.2;
+              &:hover {
+                color: #f8ab0c;
+              }
             }
           }
           .label {
@@ -77,6 +81,9 @@
           "a2"
           "b2"
           "c2";
+        .item {
+          cursor: pointer;
+        }
         .title {
           position: absolute;
           width: 100%;
@@ -88,6 +95,9 @@
             font-weight: 600;
             color: #fff;
             line-height: 1.2;
+            &:hover {
+              color: #f8ab0c;
+            }
           }
         }
         .label {
@@ -236,7 +246,9 @@
     }
   }
   .video {
+    margin-top: 30px;
     .list {
+      margin-top: 33px;
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       grid-gap: 18px 20px;
@@ -292,62 +304,60 @@
   .golfer {
     margin-top: 25px;
     margin-bottom: 60px;
-    .racers {
+    &_list {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-gap: 20px;
       margin-top: 20px;
-      &_list {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        grid-gap: 20px;
-        margin-top: 20px;
-      }
-      &_item {
-        position: relative;
-        height: 230px;
-        cursor: pointer;
-        &_content {
-          position: absolute;
-          background: #00000099;
-          width: 100%;
-          bottom: 0;
-          padding: 4px 9px 6px;
-          .boxname {
-            display: flex;
-            flex-direction: column;
-            font-size: 11px;
-            line-height: 1.2;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.7);
-            padding-bottom: 5px;
-            cursor: pointer;
-            &:hover span {
-              color: #f8ab0c;
-              text-decoration: underline;
-            }
-            span {
-              color: #fff;
-              &:last-child {
-                font-weight: 800;
-              }
-            }
-          }
-          .boxteam {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 6px;
-            span {
-              color: #fff;
-              font-size: 10px;
-              font-weight: 700;
-            }
-          }
-        }
-        &_flag {
-          position: relative;
-          height: 15px;
-          width: 27px;
+    }
+    &_item {
+      position: relative;
+      height: 281px;
+      cursor: pointer;
+      &_content {
+        position: absolute;
+        background: #00000099;
+        width: 100%;
+        bottom: 0;
+        padding: 4px 9px 6px;
+        .boxname {
+          display: flex;
+          flex-direction: column;
+          font-size: 15px;
+          line-height: 1.2;
+          border-bottom: 1px solid rgba(255, 255, 255, 0.7);
+          padding-bottom: 5px;
+          cursor: pointer;
           &:hover span {
             color: #f8ab0c;
             text-decoration: underline;
           }
+          .fname,
+          .lname {
+            color: #fff;
+          }
+          .lname {
+            font-weight: 800;
+          }
+        }
+        .boxNationality {
+          display: flex;
+          justify-content: space-between;
+          margin-top: 6px;
+          span {
+            color: #fff;
+            font-size: 12px;
+            font-weight: 700;
+          }
+        }
+      }
+      &_flag {
+        position: relative;
+        height: 15px;
+        width: 27px;
+        &:hover span {
+          color: #f8ab0c;
+          text-decoration: underline;
         }
       }
     }
