--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -210,3 +210,40 @@ button {
     background-color: rgba(248, 171, 12, 1);
   }
 }
+#Navigation-Tour {
+  .nav-tabs {
+    border-bottom: none;
+  }
+  .nav-tabs .nav-link {
+    text-transform: uppercase;
+    border-radius: 0px;
+    font-size: 14px;
+    font-weight: 600;
+    color: #000;
+    background-color: #e7e7e7;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-top: 4px solid #e7e7e7;
+    color: #5e5e5e;
+    &:focus,
+    &:hover {
+      background: #ffffff;
+      color: #0b2b20;
+      box-shadow: 2px 2px 13px rgba(0, 0, 0, 0.25);
+      border-top: 4px solid #f8ab0c;
+    }
+  }
+  .nav-tabs .nav-link.active {
+    background: #ffffff;
+    color: #0b2b20;
+    box-shadow: 2px 2px 13px rgba(0, 0, 0, 0.25);
+    border-top: 4px solid #f8ab0c;
+    &:focus,
+    &:hover {
+      color: #0b2b20;
+      background-color: #ffffff;
+    }
+  }
+}
