--- a/pages/golf/home/home.module.scss
+++ b/pages/golf/home/home.module.scss
@@ -161,6 +161,7 @@
           h5 {
             font-size: 12px;
             font-weight: 600;
+            margin-left: 20px;
           }
         }
         &_banner {
