--- a/pages/golf/home/home.module.scss
+++ b/pages/golf/home/home.module.scss
@@ -1,7 +1,7 @@
 .home_page {
   .goft_home,
   .community {
-    margin-top: 40px;
+    padding-top: 40px;
     .content {
       margin-top: 25px;
       .trending {
