--- a/components/HeaderAcademy/headerAcademy.module.scss
+++ b/components/HeaderAcademy/headerAcademy.module.scss
@@ -2,6 +2,11 @@
   background-color: rgba(11, 43, 32, 1);
   padding-top: 10px;
   padding-bottom: 10px;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  height: auto;
+  z-index: 9999;
   &_content {
     justify-content: space-between;
     align-items: center;
@@ -37,7 +42,7 @@
       &_menu {
         position: absolute;
         padding-top: 40px !important;
-        top: 62px;
+        top: 68px;
         width: 245px;
         right: 0px;
         perspective: 1000px;
@@ -46,7 +51,7 @@
           display: none;
           color: white;
           background-color: #0b2b20;
-          padding: 10px 28px;
+          padding: 15px 28px;
           font-size: 12px;
           font-weight: 500;
           text-transform: none !important;
@@ -55,25 +60,27 @@
           flex-direction: column;
           &:hover {
             color: #f8ab0c;
+            background: #0b2b20;
+            opacity: 0.6;
             span {
               color: #f8ab0c;
             }
           }
-          &:first-child {
-            border-bottom: 1px solid #fff;
-            padding-top: 12px;
-            padding-bottom: 16px;
-          }
-          &:last-child {
-            border-top: 1px solid #fff;
-            padding-top: 12px;
-            padding-bottom: 15px;
-          }
-          &:not(:first-child),
-          &:not(:last-child) {
-            padding-top: 12px;
-            padding-bottom: 10px;
-          }
+          // &:first-child {
+          //   // border-bottom: 1px solid #fff;
+          //   padding-top: 12px;
+          //   padding-bottom: 16px;
+          // }
+          // &:last-child {
+          //   // border-top: 1px solid #fff;
+          //   padding-top: 12px;
+          //   padding-bottom: 15px;
+          // }
+          // &:not(:first-child),
+          // &:not(:last-child) {
+          //   padding-top: 12px;
+          //   padding-bottom: 10px;
+          // }
           span {
             &:nth-child(1) {
               text-transform: capitalize;
