--- a/pages/golf/course/Course.module.scss
+++ b/pages/golf/course/Course.module.scss
@@ -151,12 +151,42 @@
     }
   }
   .location {
-    margin-top: 60px;
-    .content {
-      margin-top: 23px;
-      position: relative;
-      height: 600px;
-      width: 100%;
+    margin-top: 65px;
+    margin-bottom: 72px;
+    &_list {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-gap: 20px;
+      margin-top: 30px;
+      .item {
+        border: 3px solid #fff;
+        padding-bottom: 47px;
+        box-shadow: 0px 3px 11px rgba(0, 0, 0, 0.25);
+        .image {
+          position: relative;
+          height: 200px;
+        }
+        .title {
+          font-size: 20px;
+          font-weight: 600;
+          text-decoration: none;
+          color: #0b2b20;
+          text-align: center;
+          display: flex;
+          justify-content: center;
+          margin-top: 10px;
+          &:hover {
+            color: #f8ab0c;
+          }
+        }
+        .subTitle {
+          font-size: 17px;
+          font-weight: 400;
+          text-align: center;
+          justify-content: center;
+          margin-top: 15px;
+        }
+      }
     }
   }
   .coach {
@@ -231,40 +261,82 @@
     margin-top: 65px;
     margin-bottom: 72px;
     &_list {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-gap: 20px;
+      // display: grid;
+      // grid-template-columns: repeat(3, 1fr);
+      // grid-gap: 20px;
+      // margin-top: 30px;
+      // padding-bottom: 12px;
+      // .item {
+      //   padding: 20px 24px;
+      //   border: 3px solid #0b2b20;
+      //   .image {
+      //     position: relative;
+      //     height: 200px;
+      //   }
+      //   .title {
+      //     font-size: 20px;
+      //     font-weight: 600;
+      //     text-decoration: none;
+      //     color: #0b2b20;
+      //     margin-top: 20px;
+      //     text-align: center;
+      //     &:hover {
+      //       color: #f8ab0c;
+      //     }
+      //   }
+      //   .subTitle {
+      //     font-size: 17px;
+      //     font-weight: 400;
+      //     text-align: center;
+      //     margin-top: 15px;
+      //   }
+      //   .price {
+      //     color: #f8ab0c;
+      //     font-size: 25px;
+      //     font-weight: 600;
+      //     text-align: center;
+      //   }
+      // }
+      position: relative;
+      width: 100%;
+      height: 900px;
       margin-top: 30px;
-      padding-bottom: 12px;
-      .item {
-        padding: 20px 24px;
-        border: 3px solid #0b2b20;
-        .image {
-          position: relative;
-          height: 200px;
-        }
-        .title {
-          font-size: 20px;
-          font-weight: 600;
-          text-decoration: none;
-          color: #0b2b20;
-          margin-top: 20px;
-          text-align: center;
-          &:hover {
-            color: #f8ab0c;
+    }
+  }
+  .contact {
+    margin-top: 77px;
+    margin-bottom: 82px;
+    .form {
+      margin-top: 52px !important;
+      input[type="text"],
+      textarea {
+        width: 100%;
+        background: rgba(217, 217, 217, 0.3);
+        border: 0;
+        padding: 10px 15px;
+        margin-top: 22px;
+        color: #0b2b2099;
+      }
+      .list_checkBox {
+        background: rgba(217, 217, 217, 0.3);
+        margin-top: 22px;
+        padding: 19px 15px;
+        .item {
+          display: flex;
+          align-items: center;
+          &:not(:nth-child(1)) {
+            margin-top: 10px;
           }
-        }
-        .subTitle {
-          font-size: 17px;
-          font-weight: 400;
-          text-align: center;
-          margin-top: 15px;
-        }
-        .price {
-          color: #f8ab0c;
-          font-size: 25px;
-          font-weight: 600;
-          text-align: center;
+          input {
+            width: 12px;
+            height: 12px;
+          }
+          span {
+            color: #0b2b2099;
+            font-size: 16px;
+            font-weight: 500;
+            margin-left: 10px;
+          }
         }
       }
     }
