--- a/components/HeaderMain/headerMain.module.scss
+++ b/components/HeaderMain/headerMain.module.scss
@@ -31,35 +31,65 @@
       }
     }
     .dropdown {
-      position: relative;
       i {
         margin-left: 12px;
       }
       &_menu {
         position: absolute;
-        padding-top: 20px !important;
-        top: 100%;
-        left: 0;
-        width: 100%;
-        // perspective: 1000px;
+        padding-top: 40px !important;
+        top: 68px;
+        width: 245px;
+        right: 0px;
+        perspective: 1000px;
         z-index: 1;
         li {
           display: none;
           color: white;
-          background-color: #34495e;
-          padding: 10px 20px;
-          font-size: 14px;
-          font-weight: 400;
+          background-color: #0b2b20;
+          padding: 15px 28px;
+          font-size: 12px;
+          font-weight: 500;
           text-transform: none !important;
           cursor: pointer;
           opacity: 1;
+          flex-direction: column;
           &:hover {
-            background-color: #2980b9;
+            color: #f8ab0c;
+            background: #0b2b20;
+            opacity: 0.6;
+            span {
+              color: #f8ab0c;
+            }
+          }
+          // &:first-child {
+          //   // border-bottom: 1px solid #fff;
+          //   padding-top: 12px;
+          //   padding-bottom: 16px;
+          // }
+          // &:last-child {
+          //   // border-top: 1px solid #fff;
+          //   padding-top: 12px;
+          //   padding-bottom: 15px;
+          // }
+          // &:not(:first-child),
+          // &:not(:last-child) {
+          //   padding-top: 12px;
+          //   padding-bottom: 10px;
+          // }
+          span {
+            &:nth-child(1) {
+              text-transform: capitalize;
+              font-weight: 500;
+            }
+            &:nth-child(2) {
+              text-transform: lowercase;
+              font-weight: 300;
+            }
           }
         }
       }
       &:hover .dropdown_menu li {
-        display: block !important;
+        display: flex !important;
       }
       &_menu {
         @for $num from 1 through 5 {
