--- a/pages/golf/sign-up/SignUp.module.scss
+++ b/pages/golf/sign-up/SignUp.module.scss
@@ -25,6 +25,7 @@
     margin-top: 76px !important;
     .image {
       position: relative;
+      height: 495px;
       img {
         padding-right: 20px !important;
       }
