--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -462,19 +462,11 @@ button {
   }
   .swiper {
     width: 100%;
+    position: relative;
   }
-
-  // .swiper-slide {
-  //   background-position: center;
-  //   background-size: cover;
-  //   width: 300px;
-  //   height: 300px;
-  // }
-
-  // .swiper-slide img {
-  //   display: block;
-  //   width: 100%;
-  // }
+  .swiper-pagination {
+    bottom: -100px;
+  }
 }
 #ProShopDetail {
   .nav-tabs {
