--- a/pages/proshop/ProshopDetail/ProShopDetail.module.scss
+++ b/pages/proshop/ProshopDetail/ProShopDetail.module.scss
@@ -1,4 +1,26 @@
 .proshop_detail {
+  .btn_next {
+    position: absolute;
+    bottom: -85px;
+    right: 0;
+    z-index: 20;
+    border: none;
+    background-color: transparent;
+    i {
+      font-size: 30px;
+    }
+  }
+  .btn_prev {
+    position: absolute;
+    bottom: -85px;
+    left: 0;
+    z-index: 20;
+    border: none;
+    background-color: transparent;
+    i {
+      font-size: 30px;
+    }
+  }
   .image {
     position: relative;
     height: 400px;
@@ -73,7 +95,7 @@
     }
   }
   .Tabs {
-    margin-top: 150px;
+    margin-top: 200px;
     p {
       font-size: 16px;
       line-height: 1.8;
