--- a/pages/academy/course/Course.module.scss
+++ b/pages/academy/course/Course.module.scss
@@ -267,48 +267,78 @@
   }
   .fee {
     margin-top: 65px;
+    padding-top: 60px;
+    padding-bottom: 100px;
     margin-bottom: 72px;
-    &_list {
-      // display: grid;
-      // grid-template-columns: repeat(3, 1fr);
-      // grid-gap: 20px;
-      // margin-top: 30px;
-      // padding-bottom: 12px;
-      // .item {
-      //   padding: 20px 24px;
-      //   border: 3px solid #0b2b20;
-      //   .image {
-      //     position: relative;
-      //     height: 200px;
-      //   }
-      //   .title {
-      //     font-size: 20px;
-      //     font-weight: 600;
-      //     text-decoration: none;
-      //     color: #0b2b20;
-      //     margin-top: 20px;
-      //     text-align: center;
-      //     &:hover {
-      //       color: #f8ab0c;
-      //     }
-      //   }
-      //   .subTitle {
-      //     font-size: 17px;
-      //     font-weight: 400;
-      //     text-align: center;
-      //     margin-top: 15px;
-      //   }
-      //   .price {
-      //     color: #f8ab0c;
-      //     font-size: 25px;
-      //     font-weight: 600;
-      //     text-align: center;
-      //   }
-      // }
-      position: relative;
-      width: 100%;
-      height: 900px;
-      margin-top: 30px;
+    background-color: #0b2b20;
+    p {
+      line-height: 1.8;
+      font-size: 15px;
+      margin-top: 40px;
+    }
+    button {
+      background-color: transparent;
+      color: #fff;
+      border: 2px solid;
+      padding: 6px 20px;
+      margin-top: 50px !important;
+      text-transform: uppercase;
+      font-weight: 600;
+      &:hover {
+        background: #fff;
+        color: #0b2b20;
+      }
+    }
+    .list {
+      margin-top: 40px;
+      .item {
+        margin-top: 30px !important;
+        &:nth-child(odd) {
+          padding-right: 10px;
+        }
+        &:nth-child(even) {
+          padding-left: 10px;
+        }
+        .info {
+          background: #fff;
+          padding: 50px 25px;
+          span {
+            font-size: 12px;
+            font-weight: 500;
+            color: #fff;
+            background-color: #0b2b20;
+            padding: 5px 10px;
+          }
+          h3 {
+            font-size: 24px;
+            font-weight: 700;
+            margin-top: 30px;
+          }
+          .desc {
+            font-size: 14px;
+            ul {
+              list-style: disc;
+              padding-left: 15px !important;
+              li {
+                margin-top: 6px;
+              }
+            }
+          }
+          button {
+            padding: 6px 12px;
+            &:hover {
+              background-color: #fff;
+            }
+          }
+        }
+        .image {
+          position: relative;
+        }
+      }
+      button {
+        background: #0b2b20;
+        margin-top: 15px !important;
+      }
     }
   }
   .contact {
