--- a/pages/booking/Booking.module.scss
+++ b/pages/booking/Booking.module.scss
@@ -101,4 +101,60 @@
       padding: 5px 15px !important;
     }
   }
+  .confirm {
+    padding-top: 35px;
+    margin-bottom: 128px;
+    form {
+      input[type="text"] {
+        width: 100%;
+        background: rgba(217, 217, 217, 0.3);
+        border: 0;
+        padding: 10px 15px;
+        margin-top: 22px;
+        color: #0b2b2099;
+      }
+    }
+  }
+  .info {
+    padding-top: 35px;
+    margin-bottom: 88px;
+    .content {
+      margin-top: 50px;
+      box-shadow: 0px 4px 20px 10px rgba(0, 0, 0, 0.05);
+      .header {
+        background-color: #f8ab0c;
+        padding: 20px;
+        h5 {
+          font-size: 20px;
+          font-weight: 600;
+          line-height: 1;
+          margin-bottom: 0px;
+        }
+      }
+      .info {
+        padding-top: 50px;
+        padding-bottom: 60px;
+        .left {
+          h6 {
+            font-size: 18px;
+            font-weight: 600;
+            line-height: 1.8;
+            &:not(:first-child) {
+              margin-top: 5px;
+            }
+          }
+        }
+        .right {
+          h6 {
+            font-size: 18px;
+            font-weight: 400;
+            line-height: 1.8;
+            &:not(:first-child) {
+              margin-top: 5px;
+            }
+          }
+        }
+      }
+    }
+  }
 }
