--- a/pages/academy/course/Course.module.scss
+++ b/pages/academy/course/Course.module.scss
@@ -1,24 +1,24 @@
 .course_page {
-  .button {
-    margin-top: 30px;
-    button {
-      background: #0b2b20;
-      border: 2px solid #0b2b20;
-      color: #fff;
-      font-size: 13px;
-      font-weight: 600;
-      line-height: 1.2;
-      padding: 6px 30px;
-      margin-left: 5px;
-      margin-right: 5px;
-      text-transform: uppercase;
-      &:hover {
-        color: rgba(248, 171, 12, 1);
-        border: 2px solid;
-        background: transparent;
-      }
-    }
-  }
+  // .button {
+  //   margin-top: 30px;
+  //   button {
+  //     background: #0b2b20;
+  //     border: 2px solid #0b2b20;
+  //     color: #fff;
+  //     font-size: 13px;
+  //     font-weight: 600;
+  //     line-height: 1.2;
+  //     padding: 6px 30px;
+  //     margin-left: 5px;
+  //     margin-right: 5px;
+  //     text-transform: uppercase;
+  //     &:hover {
+  //       color: rgba(248, 171, 12, 1);
+  //       border: 2px solid;
+  //       background: transparent;
+  //     }
+  //   }
+  // }
   // .full {
   //   @media screen and (min-width: 1280px) {
   //     margin-left: -45px;
@@ -51,6 +51,9 @@
         font-weight: 500;
         color: #fff;
         text-transform: uppercase;
+        @media screen and (max-width: 767.98px) {
+          font-size: 45px;
+        }
       }
       button {
         background-color: transparent;
@@ -76,6 +79,9 @@
       flex-direction: column;
       margin: auto;
       text-align: center;
+      @media screen and (max-width: 767.98px) {
+        width: 100%;
+      }
       h5 {
         font-size: 30px;
         font-weight: 500;
@@ -88,14 +94,48 @@
       }
     }
     .list {
-      display: flex;
-      grid-template-columns: repeat(3, 1fr);
-      grid-gap: 20px;
+      // display: flex;
+      // grid-template-columns: repeat(3, 1fr);
+      // grid-gap: 20px;
       margin-top: 15px;
       .item {
-        position: relative;
-        height: 260px;
-        width: 100%;
+        &:nth-child(1) {
+          padding-right: 10px;
+          @media screen and (max-width: 576px) {
+            padding-left: 0px;
+          }
+        }
+        &:nth-child(2) {
+          padding-right: 10px;
+          padding-left: 10px;
+          @media screen and (max-width: 576px) {
+            padding-left: 10px;
+            padding-right: 0px;
+          }
+        }
+        &:nth-child(3) {
+          padding-left: 10px;
+          @media screen and (max-width: 767px) {
+            padding-left: 0px;
+            padding-right: 10px;
+            padding-top: 20px;
+          }
+          @media screen and (max-width: 576px) {
+            width: 100% !important;
+            padding-right: 0px;
+            .image {
+              height: 280px;
+            }
+          }
+        }
+        .image {
+          position: relative;
+          height: 260px;
+          width: 100%;
+          @media screen and (max-width: 576px) {
+            height: 180px;
+          }
+        }
       }
     }
     .desc {
@@ -156,89 +196,166 @@
   .location {
     margin-top: 65px;
     margin-bottom: 72px;
-    &_list {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-gap: 20px;
-      margin-top: 30px;
+    .list {
+      margin-top: 40px;
       .item {
-        border: 3px solid #fff;
-        padding-bottom: 47px;
-        box-shadow: 0px 3px 11px rgba(0, 0, 0, 0.25);
-        .image {
-          position: relative;
-          height: 200px;
-        }
-        .title {
-          font-size: 20px;
-          font-weight: 600;
-          text-decoration: none;
-          color: #0b2b20;
-          text-align: center;
-          display: flex;
-          justify-content: center;
-          margin-top: 10px;
-          &:hover {
-            color: #f8ab0c;
+        &:nth-child(1) {
+          padding-right: 10px;
+          @media screen and (max-width: 767.98px) {
+            padding-right: 0px;
           }
         }
-        .subTitle {
-          font-size: 17px;
-          font-weight: 400;
-          text-align: center;
-          justify-content: center;
-          margin-top: 15px;
+        &:nth-child(2) {
+          padding-right: 10px;
+          padding-left: 10px;
+          @media screen and (max-width: 767.98px) {
+            padding-right: 0px;
+            padding-left: 0px;
+            padding-top: 20px;
+            padding-bottom: 20px;
+          }
+        }
+        &:nth-child(3) {
+          padding-left: 10px;
+          @media screen and (max-width: 992px) {
+            padding-left: 0px;
+            padding-right: 10px;
+            padding-top: 20px;
+            width: 100%;
+            .info {
+              .image {
+                height: 320px;
+              }
+            }
+          }
+          @media screen and (max-width: 767.98px) {
+            padding-right: 0px;
+          }
+        }
+        .info {
+          border: 3px solid #fff;
+          box-shadow: 0px 3px 11px rgba(0, 0, 0, 0.25);
+          padding-bottom: 47px;
+          .image {
+            position: relative;
+            height: 200px;
+            @media screen and (max-width: 767.98px) {
+              height: 240px !important;
+            }
+          }
+          .title {
+            font-size: 20px;
+            font-weight: 600;
+            text-decoration: none;
+            color: #0b2b20;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            margin-top: 10px;
+            &:hover {
+              color: #f8ab0c;
+            }
+          }
+          .subTitle {
+            font-size: 17px;
+            font-weight: 400;
+            text-align: center;
+            justify-content: center;
+            margin-top: 15px;
+          }
         }
       }
     }
   }
   .coach {
     margin-top: 57px;
-    &_top {
-      display: grid;
-      grid-template-columns: 2fr 1fr;
-      grid-gap: 30px;
+    .top {
       margin-top: 50px;
       .content {
+        padding-right: 10px;
+        @media screen and (max-width: 767.98px) {
+          padding-right: 0px;
+        }
+
         h3 {
-          font-size: 24px;
+          font-size: 20px;
           font-weight: 700;
-          text-align: justify;
           span {
-            font-size: 15px;
+            font-size: 14px;
             font-weight: 600;
-            text-align: justify;
           }
         }
         h4 {
-          font-size: 20px;
+          font-size: 18px;
           font-weight: 700;
           margin-top: 20px;
-          text-align: justify;
         }
         h5 {
-          font-size: 15px;
+          font-size: 14px;
           font-weight: 600;
           margin-top: 5px;
           margin-bottom: 30px;
-          text-align: justify;
         }
         p {
-          font-size: 18px;
+          font-size: 16px;
           font-weight: 500;
           text-align: justify;
         }
       }
       .image {
         position: relative;
+        width: 100%;
+        height: 100%;
+        img {
+          padding-left: 10px !important;
+        }
+        @media screen and (max-width: 992px) {
+          margin: auto;
+          width: 50%;
+          height: 300px;
+          margin-bottom: 20px;
+          img {
+            padding-left: 0px !important;
+          }
+        }
+        @media screen and (max-width: 767.98px) {
+          width: 100%;
+          height: 350px;
+        }
       }
     }
     &_list {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-gap: 20px;
       margin-top: 70px;
       .item {
+        &:nth-child(1) {
+          padding-right: 10px;
+          @media screen and (max-width: 767.98px) {
+            padding-right: 0px;
+          }
+        }
+        &:nth-child(2) {
+          padding-right: 10px;
+          padding-left: 10px;
+          @media screen and (max-width: 767.98px) {
+            padding-right: 0px;
+            padding-left: 0px;
+            padding-top: 20px;
+            padding-bottom: 20px;
+          }
+        }
+        &:nth-child(3) {
+          padding-left: 10px;
+          @media screen and (max-width: 992px) {
+            padding-left: 0px;
+            padding-right: 10px;
+            padding-top: 20px;
+            width: 80%;
+          }
+          @media screen and (max-width: 767.98px) {
+            padding-right: 0px;
+            width: 100%;
+          }
+        }
         .image {
           position: relative;
           height: 450px;
@@ -282,6 +399,12 @@
       border: 2px solid;
       padding: 6px 20px;
       margin-top: 50px !important;
+      @media screen and (max-width: 767px) {
+        width: 50%;
+      }
+      @media screen and (max-width: 576px) {
+        width: 100%;
+      }
       text-transform: uppercase;
       font-weight: 600;
       &:hover {
@@ -293,15 +416,39 @@
       margin-top: 40px;
       .item {
         margin-top: 30px !important;
+        box-shadow: 0px 3px 11px rgba(0, 0, 0, 0.25);
+        @media screen and (max-width: 576px) {
+          background-color: #fff;
+        }
         &:nth-child(odd) {
           padding-right: 10px;
+          @media screen and (max-width: 992px) {
+            padding-right: 0px;
+          }
         }
         &:nth-child(even) {
           padding-left: 10px;
+          @media screen and (max-width: 992px) {
+            padding-left: 0px;
+          }
         }
         .info {
           background: #fff;
           padding: 50px 25px;
+          hr {
+            display: none;
+          }
+          @media screen and (max-width: 576px) {
+            padding-top: 20px;
+            hr {
+              display: flex;
+              background: #0b2b20;
+              border-top: 1px solid;
+              opacity: 1;
+              margin: 0px;
+              margin-bottom: 20px;
+            }
+          }
           span {
             font-size: 12px;
             font-weight: 500;
@@ -333,11 +480,21 @@
         }
         .image {
           position: relative;
+          @media screen and (max-width: 576px) {
+            height: 400px;
+            width: 100%;
+            img {
+              padding: 25px 25px 0px !important;
+            }
+          }
         }
       }
       button {
         background: #0b2b20;
         margin-top: 15px !important;
+        @media screen and (max-width: 767px) {
+          width: 100%;
+        }
       }
     }
   }
