--- a/pages/academy/sign-in/SignIn.module.scss
+++ b/pages/academy/sign-in/SignIn.module.scss
@@ -29,9 +29,19 @@
       img {
         padding-right: 20px !important;
       }
+      @media screen and (max-width: 768px) {
+        img {
+          padding-right: 0px !important;
+          object-fit: contain;
+        }
+      }
     }
     .form {
       padding-left: 20px;
+      @media screen and (max-width: 768px) {
+        padding-left: 0px !important;
+        margin-top: 30px;
+      }
       h5 {
         color: #0b2b20;
         font-size: 25px;
@@ -39,8 +49,7 @@
         text-align: center;
         text-transform: uppercase;
       }
-      input[type="text"],
-      input[type="password"] {
+      input[type="text"] {
         width: 100%;
         background: rgba(217, 217, 217, 0.3);
         border: 0;
@@ -49,8 +58,8 @@
         color: #0b2b2099;
       }
       .list_checkBox {
-        // background: rgba(217, 217, 217, 0.3);
-        // margin-top: 22px;
+        background: rgba(217, 217, 217, 0.3);
+        margin-top: 22px;
         padding: 19px 15px;
         .item {
           display: flex;
@@ -63,7 +72,7 @@
             height: 12px;
           }
           span {
-            color: #000;
+            color: #0b2b2099;
             font-size: 16px;
             font-weight: 500;
             margin-left: 10px;
