--- a/pages/academy/sign-up/SignUp.module.scss
+++ b/pages/academy/sign-up/SignUp.module.scss
@@ -29,9 +29,19 @@
       img {
         padding-right: 20px !important;
       }
+      @media screen and (max-width: 768px) {
+        img {
+          padding-right: 0px !important;
+          object-fit: contain;
+        }
+      }
     }
     .form {
       padding-left: 20px;
+      @media screen and (max-width: 768px) {
+        padding-left: 0px !important;
+        margin-top: 30px;
+      }
       h5 {
         color: #0b2b20;
         font-size: 25px;
