--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -207,6 +207,15 @@ button {
     margin-left: 5px;
     margin-right: 5px;
     text-transform: uppercase;
+    @media screen and (max-width: 767px) {
+      width: 50%;
+      padding: 10px;
+    }
+    @media screen and (max-width: 576px) {
+      width: 100%;
+      padding: 10px;
+      margin: 0;
+    }
     &:hover {
       color: rgba(248, 171, 12, 1);
       border: 2px solid;
@@ -235,6 +244,8 @@ button {
       border-radius: 8px;
       padding: 6px 15px;
       margin-top: 5px;
+      font-size: 14px;
+      font-weight: 500;
     }
     .dropdown-toggle {
       font-weight: 600;
@@ -256,10 +267,10 @@ button {
     }
     .dropdown-item:focus,
     .dropdown-item:hover {
-      background-color: #0a58ca;
+      background-color: #f8ab0c;
       color: #fff;
       .dropdown-toggle {
-        background-color: #0a58ca;
+        background-color: #f8ab0c;
         color: #fff !important;
       }
     }
@@ -289,6 +300,8 @@ button {
       border-radius: 8px;
       padding: 6px 15px;
       margin-top: 5px;
+      font-size: 14px;
+      font-weight: 500;
     }
     .dropdown-toggle {
       font-weight: 600;
@@ -310,10 +323,10 @@ button {
     }
     .dropdown-item:focus,
     .dropdown-item:hover {
-      background-color: #0a58ca;
+      background-color: #f8ab0c;
       color: #fff;
       .dropdown-toggle {
-        background-color: #0a58ca;
+        background-color: #f8ab0c;
         color: #fff !important;
       }
     }
