--- a/pages/booking/Booking.module.scss
+++ b/pages/booking/Booking.module.scss
@@ -13,24 +13,26 @@
       margin-top: 24px;
     }
     .form {
-      border-bottom: 2px solid #cecece;
-      margin-bottom: 50px;
-      margin-top: 60px;
       width: 95% !important;
-      input {
-        padding: 6px 0px 6px 30px;
-        border: none;
-        font-size: 16px;
-        font-weight: 400;
-        color: #0b2b20b2;
-      }
-      button {
-        border: none;
-        background: transparent;
-        padding-right: 30px;
-        i {
-          color: #bc0707;
-          font-size: 20px;
+      margin-bottom: 50px;
+      .input {
+        border-bottom: 2px solid #cecece;
+        margin-top: 60px;
+        input {
+          padding: 6px 0px 6px 30px;
+          border: none;
+          font-size: 16px;
+          font-weight: 400;
+          color: #0b2b20b2;
+        }
+        button {
+          border: none;
+          background: transparent;
+          padding-right: 30px;
+          i {
+            color: #bc0707;
+            font-size: 20px;
+          }
         }
       }
     }
@@ -55,7 +57,6 @@
     height: 600px;
   }
   .time {
-    padding-top: 40px;
     &_content {
       background: #ffffff;
       box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.05);
@@ -102,7 +103,6 @@
     }
   }
   .confirm {
-    padding-top: 35px;
     margin-bottom: 128px;
     form {
       input[type="text"] {
@@ -116,7 +116,6 @@
     }
   }
   .info {
-    padding-top: 35px;
     margin-bottom: 88px;
     .content {
       margin-top: 50px;
@@ -153,6 +152,43 @@
               margin-top: 5px;
             }
           }
+        }
+      }
+    }
+  }
+  .booking_tool {
+    margin-bottom: 80px;
+    .btn_continute {
+      button {
+        background: transparent;
+        border: 2px solid #f8ab0c;
+        color: #000;
+        margin-right: 5px;
+        padding: 8px 25px;
+        border-radius: 8px;
+        i {
+          margin-right: 8px;
+        }
+        &:hover {
+          background: #f8ab0c;
+          color: #fff;
+        }
+      }
+    }
+    .btn_check_order {
+      button {
+        background: transparent;
+        border: 2px solid #0b2b20;
+        color: #000;
+        margin-left: 5px;
+        padding: 8px 25px;
+        border-radius: 8px;
+        i {
+          margin-left: 8px;
+        }
+        &:hover {
+          background: #0b2b20;
+          color: #fff;
         }
       }
     }
