--- a/pages/academy/course/Course.module.scss
+++ b/pages/academy/course/Course.module.scss
@@ -36,6 +36,9 @@
   .banner {
     position: relative;
     height: 600px;
+    @media screen and (max-width: 576px) {
+      height: 350px;
+    }
     .content {
       position: absolute;
       top: 0;
@@ -53,6 +56,9 @@
         text-transform: uppercase;
         @media screen and (max-width: 767.98px) {
           font-size: 45px;
+        }
+        @media screen and (max-width: 576.98px) {
+          font-size: 36px;
         }
       }
       button {
@@ -85,6 +91,10 @@
       h5 {
         font-size: 30px;
         font-weight: 500;
+        line-height: 1;
+        @media screen and (max-width: 576px) {
+          font-size: 24px;
+        }
       }
       p {
         font-size: 18px;
@@ -142,6 +152,7 @@
       margin-top: 30px;
       p {
         font-size: 16px;
+        font-weight: 500;
         line-height: 1.8;
         text-align: justify;
       }
@@ -388,9 +399,18 @@
     padding-bottom: 100px;
     margin-bottom: 72px;
     background-color: #0b2b20;
+    h2 {
+      font-size: 32px;
+      font-weight: 500;
+      line-height: 1;
+      @media screen and (max-width: 576px) {
+        font-size: 28px;
+      }
+    }
     p {
       line-height: 1.8;
       font-size: 15px;
+      font-weight: 500;
       margin-top: 40px;
     }
     button {
@@ -450,7 +470,7 @@
             }
           }
           span {
-            font-size: 12px;
+            font-size: 10px;
             font-weight: 500;
             color: #fff;
             background-color: #0b2b20;
@@ -462,17 +482,19 @@
             margin-top: 30px;
           }
           .desc {
-            font-size: 14px;
+            font-size: 12px;
             ul {
               list-style: disc;
               padding-left: 15px !important;
               li {
                 margin-top: 6px;
+                font-weight: 500;
               }
             }
           }
           button {
             padding: 6px 12px;
+            font-size: 13px;
             &:hover {
               background-color: #fff;
             }
